prevent overflow on keyboard open

--- a/src/index.css
+++ b/src/index.css
@@ -191,5 +191,6 @@ body {
     margin: 0;
     padding: 0;
     overscroll-behavior: none;
+    height: 100%;
   }
 }
